Use proper version for featured mod updates and use scenario file as primary source for map folder path (#2760)
* Use proper version for featured mod updates and use scenario file as primary source for map folder path

* remove experimental